improved format and added bar graph for most common genre

--- a/index.html
+++ b/index.html
@@ -40,9 +40,25 @@
         </div>
     </section>
 
+    <section class = "result-section">
+        <div id = "result-container">
+            <h2 id = "result">Result</h2>
+            <div class = "button-container">
+                <button class = "spotify-button result-button">Most Common Genre</button>
+                <button class = "spotify-button result-button">Year Song Release</button>
+                <button class = "spotify-button result-button">Loudest Song</button>
+            </div>
+            <div class = "result-card" id = "result-card">
+                <div class = "result-content">
+                    <p class = "result-intro-text">Select a category and chart type to visualize data.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-    <footer class="bottom-section">
+
+    <footer class="social-links">
         <ul>
             <li>
                 <a href="https://www.linkedin.com/in/javier-a-brasil/">LinkedIn</a>
@@ -55,6 +71,9 @@
             </li>
         </ul>
     </footer>
+
+    <script src = "https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type = "module" src ="script.js"></script>
 
 </body>
 </html>
