better format, finished charts, implemented some api

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
 
     <section class="info-section">
-        <div>
+        <div class = "left-container">
             <h2>About</h2>
             <p>Welcome to the <b>Spotify Data Visualizer</b>. This project 
                 takes a large data set of music information and organizes it into categories you can select</p>
         </div>
-        <div>
+        <div class = "right-container">
             <h2>Visualizations</h2>
             <ul>
                 <li>Most Common Genre (Bar graph)</li>
-                <li>Most Average Year Song Release (pie chart)</li>
-                <li>Loudest Song in Decibles (linear graph)</li>
+                <li>Most Average Year Song Release (Doughnut chart)</li>
+                <li>Loudest Song in Decibles (Bar graph)</li>
             </ul>
         </div>
     </section>
@@ -47,6 +47,7 @@
                 <button class = "spotify-button result-button">Most Common Genre</button>
                 <button class = "spotify-button result-button">Year Song Release</button>
                 <button class = "spotify-button result-button">Loudest Song</button>
+                <button class = "spotify-button result-button">Search</button>
             </div>
             <div class = "result-card" id = "result-card">
                 <div class = "result-content">
@@ -58,8 +59,8 @@
 
 
 
-    <footer class="social-links">
-        <ul>
+    <footer>
+        <ul class = "social-links">
             <li>
                 <a href="https://www.linkedin.com/in/javier-a-brasil/">LinkedIn</a>
             </li>
