adding backend components

--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
         <div class = "left-container">
             <h2>About</h2>
             <p>Welcome to the <b>Spotify Data Visualizer</b>. This project 
-                takes a large data set of music information and organizes it into categories you can select</p>
+                takes a large data set of spotify top music hits and organizes it into categories you can select</p>
         </div>
         <div class = "right-container">
             <h2>Visualizations</h2>
             <ul>
                 <li>Most Common Genre (Bar graph)</li>
-                <li>Most Average Year Song Release (Doughnut chart)</li>
+                <li>Average Year Song Release (Doughnut chart)</li>
                 <li>Loudest Song in Decibles (Bar graph)</li>
             </ul>
         </div>
